# deterministic

./: .gitattributes  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  architecture.md  time_tracker.py  validate_builds.sh
.github/workflows/: deterministic.yml
badges/: determinism.json
benchmarks/: results.md
deterministic/badges/: determinism.json
docs/: ACCESSIBILITY.md  IMPACT.md  STORY.md
kani/: proofs.rs
src/: lib.rs  main.rs
src/verifier/: merkle.rs
