[package]
name = "deterministic-engine"
version = "1.0.0"
authors = ["Vaibhav Kumar <vaibhavkumarchhimpa@gmail.com>"]
edition = "2021"
license = "MIT"
description = "High-performance deterministic computation engine with formal verification and cryptographic security"
repository = "https://github.com/vabhavx/deterministic"
keywords = ["cryptography", "deterministic", "verification", "security", "computation"]
categories = ["cryptography", "mathematics", "science"]
readme = "README.md"
homepage = "https://github.com/vabhavx/deterministic"
documentation = "https://docs.rs/deterministic-engine"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
sha2 = "0.10"
rand = "0.8"
rand_chacha = "0.3"
ring = "0.17"
argon2 = "0.5"

# Mathematics and computation
num-bigint = "0.4"
num-traits = "0.2"
num-complex = "0.4"
ndarray = "0.15"

# Utilities
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Async support
tokio = { version = "1.0", features = ["full"], optional = true }

# Performance monitoring
criterion = { version = "0.5", optional = true }

# Formal verification
kani = { version = "0.34", optional = true }

# WebAssembly support
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
quickcheck = "1.0"

[features]
default = ["std"]
std = []
async = ["tokio"]
wasm = ["wasm-bindgen", "web-sys"]
benchmarks = ["criterion"]
verification = ["kani"]

[[bin]]
name = "deterministic"
path = "src/main.rs"

[[bench]]
name = "computation_benchmarks"
harness = false
required-features = ["benchmarks"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true

# Security audit configuration
[package.metadata.audit]
auto-ignore = []

# Documentation configuration
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Publishing configuration
[package.metadata.release]
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="\\[Unreleased\\]", replace="[{{version}}]"},
  {file="README.md", search="deterministic-engine = \".*\"", replace="deterministic-engine = \"{{version}}\""},
]

# Workspace configuration for multi-crate projects
[workspace]
members = [
    "crates/crypto",
    "crates/verification", 
    "crates/benchmarks",
    "crates/audit"
]

# Linting configuration
[lints.rust]
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"